{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 94,
  "lineage": "1dddc810-4354-aa55-dcbf-1288fe044bc9",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/publicIPAddresses/pilot-bastion-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.177.188.145",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pilot-bastion-public-ip",
            "resource_group_name": "pilot",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_lb_backend_address_pool.backend_pool",
            "module.vm_machine.azurerm_lb_rule.lb_rule",
            "module.vm_machine.azurerm_linux_virtual_machine.vm_a",
            "module.vm_machine.azurerm_linux_virtual_machine.vm_b",
            "module.vm_machine.azurerm_network_interface.vm_a_nic",
            "module.vm_machine.azurerm_network_interface.vm_b_nic",
            "module.vm_machine.azurerm_postgresql_server.psql_a",
            "module.vm_machine.azurerm_postgresql_server.psql_b",
            "module.vm_machine.azurerm_private_dns_a_record.postgresql_a",
            "module.vm_machine.azurerm_private_dns_a_record.postgresql_b",
            "module.vm_machine.azurerm_private_dns_zone.postgresql",
            "module.vm_machine.azurerm_private_dns_zone_virtual_network_link.Vnet_DNS",
            "module.vm_machine.azurerm_private_endpoint.psql_private_endpoint_a",
            "module.vm_machine.azurerm_private_endpoint.psql_private_endpoint_b",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb/loadBalancingRules/LoadBalancerRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/publicIPAddresses/pilot-public-ip"
              }
            ],
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb",
            "location": "eastus2",
            "name": "pilot-lb",
            "resource_group_name": "pilot",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb/backendAddressPools/BackendPool",
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb",
            "name": "BackendPool"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb/loadBalancingRules/LoadBalancerRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/loadBalancers/pilot-lb",
            "name": "LoadBalancerRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_a_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkInterfaces/ubuntu-vm-nic-a",
            "internal_domain_name_suffix": "ta4nbnb4sjoexmdzcgbxbpzjee.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetA"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "00-0D-3A-0E-B2-8F",
            "name": "ubuntu-vm-nic-a",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "pilot",
            "virtual_machine_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Compute/virtualMachines/ubuntu-vm-a"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_b_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkInterfaces/ubuntu-vm-nic-b",
            "internal_domain_name_suffix": "ta4nbnb4sjoexmdzcgbxbpzjee.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetB"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "00-22-48-4E-79-5D",
            "name": "ubuntu-vm-nic-b",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "pilot",
            "virtual_machine_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Compute/virtualMachines/ubuntu-vm-b"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/publicIPAddresses/pilot-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pilot-public-ip",
            "resource_group_name": "pilot",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/natGateways/pilot-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "eastus2",
            "name": "pilot-nat-gateway",
            "resource_group_name": "pilot",
            "resource_guid": "8b6c5f10-af96-44d8-bab7-667ef2a0a39c",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.pilot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkSecurityGroups/pilot-nsg",
            "location": "eastus2",
            "name": "pilot-nsg",
            "resource_group_name": "pilot",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5432"
                ],
                "direction": "Inbound",
                "name": "allow_postgres",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAnyCustom5432Outbound",
                "priority": 1023,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkSecurityGroups/pilot-nsg/securityRules/allow_http",
            "name": "allow_http",
            "network_security_group_name": "pilot-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "pilot",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkSecurityGroups/pilot-nsg/securityRules/allow_icmp",
            "name": "allow_icmp",
            "network_security_group_name": "pilot-nsg",
            "priority": 1000,
            "protocol": "Icmp",
            "resource_group_name": "pilot",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.0/16"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "5432"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkSecurityGroups/pilot-nsg/securityRules/allow_postgres",
            "name": "allow_postgres",
            "network_security_group_name": "pilot-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "pilot",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.0/16"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/networkSecurityGroups/pilot-nsg/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "pilot-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "pilot",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "pilot",
            "virtual_network_name": "pilotVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetA",
            "name": "privateSubnetA",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "pilot",
            "virtual_network_name": "pilotVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetB",
            "name": "privateSubnetB",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "pilot",
            "virtual_network_name": "pilotVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/publicSubnet",
            "name": "publicSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "pilot",
            "virtual_network_name": "pilotVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "public_subnet_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/publicSubnet",
            "nat_gateway_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/natGateways/pilot-nat-gateway",
            "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/publicSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b4d03c98-923e-4b5c-b079-118370bf2924",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet",
            "location": "eastus2",
            "name": "pilotVNet",
            "resource_group_name": "pilot",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/publicSubnet",
                "name": "publicSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetA",
                "name": "privateSubnetA"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/privateSubnetB",
                "name": "privateSubnetB"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/pilot/providers/Microsoft.Network/virtualNetworks/pilotVNet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.pilot"
          ]
        }
      ]
    }
  ]
}